Objects disappear when aligned to certain angles #47015

Closed
opened 2015-12-18 23:50:36 +01:00 by Lee Pugh · 11 comments

In the example below I'm using KX_GameObject.alignAxisToVect to align a cube to face normals. The cube disappears at certain angles.
Tested with a build from today. 2.76b does not exhibit the error.
hitnormal.blend

In the example below I'm using KX_GameObject.alignAxisToVect to align a cube to face normals. The cube disappears at certain angles. Tested with a build from today. 2.76b does not exhibit the error. [hitnormal.blend](https://archive.blender.org/developer/F269520/hitnormal.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Lee

Added subscriber: @Lee

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscribers: @hg1, @Moguri, @brita, @dr.sybren, @panzergame

Added subscribers: @hg1, @Moguri, @brita, @dr.sybren, @panzergame

Added subscriber: @Chipe1

Added subscriber: @Chipe1

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold
NikoLeopold self-assigned this 2016-02-18 04:22:17 +01:00

The most evident symptom is a division by zero (epsilon margin MT_fuzzyZero comparison) in the normalization of the base vectors of the new aligned coordinate system, in KX_GameObject::AlignAxisToVect.

Thus something might have gone wrong in the coordinate system setup.

The most evident symptom is a division by zero (epsilon margin MT_fuzzyZero comparison) in the normalization of the base vectors of the new aligned coordinate system, in KX_GameObject::AlignAxisToVect. Thus something might have gone wrong in the coordinate system setup.

In the construction of the new coordinate system with one axis aligned to the vector, the use of a parallel unit vector should be prevented, however this was not the case due to a floating point precision issue (subtraction of values with too far apart exponents).

This lead to symptomatic division by zero errors when normalizing the new base vectors, due to which the aligned object was not displayed.

The patch D1811 fixes the issue for me, waiting for review.

In the construction of the new coordinate system with one axis aligned to the vector, the use of a parallel unit vector should be prevented, however this was not the case due to a floating point precision issue (subtraction of values with too far apart exponents). This lead to symptomatic division by zero errors when normalizing the new base vectors, due to which the aligned object was not displayed. The patch [D1811](https://archive.blender.org/developer/D1811) fixes the issue for me, waiting for review.

This issue was referenced by d53132d200

This issue was referenced by d53132d200ee337b29f75ccbeec5bd106379ffdd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

D1811 was committed by Campbell as d53132d200.

[D1811](https://archive.blender.org/developer/D1811) was committed by Campbell as d53132d200.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47015
No description provided.