Fix T47015: BGE, objects vanish aligning to vector

1811 by @mangostaniko

Fixes regression since moving to floats.